Fix Container-Footer Spacing for Mobile

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -26,10 +26,14 @@ body {
   display: table;
   height: 100%;
   // Allow any content to clear the fixed footer
-  margin: 0 0 40px;
+  margin: 0;
   overflow: hidden;
   position: relative;
   width: 100%;
+
+  @include respond-min($screen-small) {
+    margin: 0 0 40px;
+  }
 
   @include ie-lte(8) {
     overflow: visible;
